--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {},
   "devDependencies": {
     "browser-sync": "^2.26.12",
-    "gulp": "^4.0.2"
+    "gulp": "^4.0.2",
+    "jshint": "^2.12.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
