--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
     "browser-sync": "^2.26.12",
     "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
     "jshint": "^2.12.0"
   },
   "scripts": {
