--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "browser-sync": "^2.26.12",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
+    "gulp-clean": "^0.4.0",
     "jshint": "^2.12.0"
   },
   "scripts": {
