Install webpack plugin

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-clean": "^0.4.0",
-    "jshint": "^2.12.0"
+    "jshint": "^2.12.0",
+    "webpack-stream": "^6.1.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
